--- a/scripts/install
+++ b/scripts/install
@@ -39,6 +39,8 @@ ynh_config_add_systemd
 
 yunohost service add "$app" --log="/var/log/$app/$app.log"
 
+ynh_config_add_logrotate
+
 #=================================================
 # START SYSTEMD SERVICE
 #=================================================
