--- a/scripts/install
+++ b/scripts/install
@@ -39,7 +39,7 @@ ynh_config_add_nginx
 
 ynh_config_add_systemd
 
-yunohost service add $app --description=YunoHost App Generator --log=/var/log/$app/$app.log 
+yunohost service add $app --description="YunoHost App Generator" --log=/var/log/$app/$app.log 
 
 ynh_config_add_logrotate
 
